debug workflow  Please enter the commit message for your changes. Lines starting

--- a/workflow-bwa-pancancer/workflow/config/workflow.ini
+++ b/workflow-bwa-pancancer/workflow/config/workflow.ini
@@ -48,3 +48,8 @@ bwa_aln_params=
 #bwa sampe
 bwa_sampe_params=
 
+picard_max_heap=2G
+max_memory=16000
+samtools_version=0.1.19
+picard_tools_version=1.105
+bwa_num_threads=8
