--- a/workflow-bwa-pancancer/pom.xml
+++ b/workflow-bwa-pancancer/pom.xml
@@ -44,10 +44,10 @@
             <version>Python-artifactory.tar</version>
             <type>gz</type>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>bwa</groupId>
             <artifactId>bwa</artifactId>
-            <version>0.7.6a</version>
+            <version>0.7.7</version>
             <classifier>compiled</classifier>
             <type>tar.gz</type>
         </dependency>
@@ -62,7 +62,7 @@
             <artifactId>picard-tools</artifactId>
             <version>1.105</version>
             <type>zip</type>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>net.sourceforge.seqware</groupId>
             <artifactId>seqware-bin-linux-x86-64-jre-6.0.29</artifactId>
